--- a/submissions/kim_soowan/Assignment 2/Analysis.Rmd
+++ b/submissions/kim_soowan/Assignment 2/Analysis.Rmd
@@ -3,10 +3,7 @@ title: "Analysis"
 author: "Soo Wan Kim"
 date: "April 28, 2017"
 output:
-  html_document:
-    code_folding: hide
-    keep_md: true
-    theme: default
+  github_document
 ---
 
 # The Role of Color in Proportional Judgment in Bar Charts
